# roma

./: .gitignore  README.md  eval_mmlu.py  granite_mmlu.json  main.py  plan.md  pyproject.toml  results.json  roma.md
config/: api_keys.toml.example  roma.yaml
src/: __init__.py  main.py
src/cli/: __init__.py  main.py  optimize.py  run.py
src/components/: __init__.py  aggregator.py  atomizer.py  executors.py  planner.py
src/components/executors/: __init__.py  base.py  code.py  retrieve.py  think.py  write.py
src/config/: __init__.py  loader.py  schema.py
src/core/: __init__.py  artifact_store.py  controller.py  graph.py  inference.py  models.py  registry.py  signatures.py
src/evaluation/: _writer.py  eval_MMLU_pro.py  eval_SealQA.py
src/optimization/: __init__.py  gepa_plus.py  judge.py  merger.py  proposer.py  verifier.py
src/prompts/: __init__.py  seed_prompts.py
src/tests/: test_cli_demo.py  test_stage0_foundations.py  test_stage1_controller.py  test_stage2_components.py  test_stage3_optimization.py  test_stage4_config.py
src/tests/tools/: __init__.py  test_tool_extract.py  test_tool_registry.py  test_tool_routing.py
