[project]
name = "roma"
version = "0.1.0"
description = "ROMA: Recursive Open Meta-Agent Framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tavily-python>=0.5.0",
    "typer>=0.12.0",
    "openai>=1.0.0",
    "datasets>=4.8.5",
    "openpyxl>=3.1.5",
]

[project.scripts]
roma = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
